tests/functional2/lang/seq/eval-fail.err.exp
error:
       … while calling the 'seq' builtin
         at /pwd/in.nix:1:1:
            1| builtins.seq (abort "foo") 2
             | ^
            2|

       … while calling the 'abort' builtin
         at /pwd/in.nix:1:15:
            1| builtins.seq (abort "foo") 2
             |               ^
            2|

       error: evaluation aborted with the following error message: 'foo'
